--- a/index.html
+++ b/index.html
@@ -8,35 +8,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+    <audio id="audio" preload="auto">
+      <source src="bastille.mp3" type="audio/mp3" />
+      <source src="bastille.ogg" type="audio/ogg" />
+    </audio>
     <div id="column">
       <div id="text">
         <div class="text-p">
-          <span class="seg text-seg">À cette époque,</span>
-          <span class="seg text-seg">à la fin du XVIIIe siècle,</span>
-          <span class="seg text-seg">la France est une monarchie absolue</span>
-          <span class="seg text-seg">de droit divin.</span>
+          <span class="seg text-seg" data-audio="text 356.908 358.217">À cette époque,</span>
+          <span class="seg text-seg" data-audio="text 358.244 360.619">à la fin du XVIIIe siècle,</span>
+          <span class="seg text-seg" data-audio="text 360.842 364.097">la France est une monarchie absolue</span>
+          <span class="seg text-seg" data-audio="text 364.097 365.352">de droit divin.</span>
         </div>
         <div class="text-p">
-          <span class="seg text-seg"><span class="cl"><span class="np">Many faiths</span> <span class="vp">believed</span> <span class="cl">that some day <span class="np">a messiah</span> <span class="vp">would appear</span> and <span class="vp">end</span> <span class="np">all wars</span>, <span class="np">famines</span> and even <span class="np">death itself</span></span></span>.</span>
+          <span class="sg text-seg"><span class="cl"><span class="np">Many faiths</span> <span class="vp">believed</span> <span class="cl">that some day <span class="np">a messiah</span> <span class="vp">would appear</span> and <span class="vp">end</span> <span class="np">all wars</span>, <span class="np">famines</span> and even <span class="np">death itself</span></span></span>.</span>
           <div class="note hide">
             <p>
-              <span class="seg">
+              <span class="sg">
                 The most important military invention in the history of China was gunpowder.
               </span>
             </p>
           </div>
-          <span class="seg text-seg">But <span class="cl"><span class="np">the notion <span class="cl">that <span class="np">humankind</span> <span class="vp">could do so</span> by <span class="cl"><span class="vp">discovering</span> <span class="np">new knowledge</span></span> and <span class="cl"><span class="vp">inventing</span> <span class="np">new tools</span></span></span></span> <span class="vp">was</span> worse than ludicrous</span>—<span class="cl">it <span class="vp">was</span> <span class="np">hubris</span></span>.</span>
+          <span class="sg text-seg">But <span class="cl"><span class="np">the notion <span class="cl">that <span class="np">humankind</span> <span class="vp">could do so</span> by <span class="cl"><span class="vp">discovering</span> <span class="np">new knowledge</span></span> and <span class="cl"><span class="vp">inventing</span> <span class="np">new tools</span></span></span></span> <span class="vp">was</span> worse than ludicrous</span>—<span class="cl">it <span class="vp">was</span> <span class="np">hubris</span></span>.</span>
           <div class="note hide">
             <p>
-              <span class="seg">
+              <span class="sg">
                 Science, industry and military technology intertwined only with the advent of the capitalist system and the Industrial Revolution.
               </span>
-              <span class="seg">
+              <span class="sg">
                 Once this relationship was established, however, it quickly transformed the world.
               </span>
             </p>
           </div>
-          <span class="seg text-seg"><span class="cl"><span class="np">The story of <span class="np">the Tower of <span class="np">Babel</span></span></span>, <span class="np">the story of <span class="np">Icarus</span></span>, <span class="np">the story of <span class="np">the Golem</span></span> and <span class="np">countless other myths</span> <span class="vp">taught</span> <span class="np">people</span> <span class="cl">that <span class="np">any attempt <span class="cl"><span class="vp">to go</span> beyond <span class="np">human limitations</span></span></span> <span class="vp">would inevitably lead</span> to <span class="np">disappointment</span> and <span class="np">disaster</span></span></span>.</span>
+          <span class="sg text-seg"><span class="cl"><span class="np">The story of <span class="np">the Tower of <span class="np">Babel</span></span></span>, <span class="np">the story of <span class="np">Icarus</span></span>, <span class="np">the story of <span class="np">the Golem</span></span> and <span class="np">countless other myths</span> <span class="vp">taught</span> <span class="np">people</span> <span class="cl">that <span class="np">any attempt <span class="cl"><span class="vp">to go</span> beyond <span class="np">human limitations</span></span></span> <span class="vp">would inevitably lead</span> to <span class="np">disappointment</span> and <span class="np">disaster</span></span></span>.</span>
         </div>
       </div>
     </div>
